--- a/Ceriyo.Toolset/MainWindow.xaml
+++ b/Ceriyo.Toolset/MainWindow.xaml
@@ -21,6 +21,7 @@
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="30"></RowDefinition>
 
         </Grid.RowDefinitions>
@@ -31,18 +32,6 @@
         	Content="Conversations:" Margin="10,10,97,141" Grid.Row="3"/>
         <Label
         	Content="Scripts:" Margin="10,10,127,141" Grid.Row="4"/>
-
-        <GridSplitter
-            Grid.Column="1"
-            Grid.Row="2"
-            Grid.RowSpan="5"
-            Width="5"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Stretch"
-            Background="Gray"
-            ShowsPreview="True">
-
-        </GridSplitter>
 
         <GridSplitter
             Grid.Column="4"
@@ -57,20 +46,21 @@
         </GridSplitter>
 
         <DockPanel
-            Grid.Column="2"
+            Grid.Column="0"
             Grid.Row="2"
-            Grid.ColumnSpan="2"
-            Grid.RowSpan="4">
-            <frb:FlatRedBallControl 
-                x:Name="gameControl"/>
+            Grid.ColumnSpan="5"
+            Grid.RowSpan="5" >
+
+            <frb:FlatRedBallControl
+            x:Name="gameControl"/>
         </DockPanel>
 
         <Comp:AreaSelectionControl 
             x:Name="areaSelection"
             HorizontalAlignment="Stretch" 
             Grid.Row="2" 
-            Grid.RowSpan="4"
-            Grid.Column="0" 
+            Grid.RowSpan="1"
+            Grid.Column="5" 
             VerticalAlignment="Stretch"
             Width="Auto"
             Height="Auto"
@@ -79,13 +69,13 @@
         <Comp:PaintObjectsControl x:Name="paintObjects"
             Grid.Column="5" 
             HorizontalAlignment="Stretch" 
-            Grid.Row="4" 
+            Grid.Row="5" 
             Grid.RowSpan="2"
             VerticalAlignment="Stretch"/>
         <Comp:ObjectSelectionComponent x:Name="objectSelection"
             Grid.Column="5" 
             HorizontalAlignment="Stretch" 
-            Grid.Row="2" 
+            Grid.Row="3" 
             Grid.RowSpan="2" 
             VerticalAlignment="Stretch" 
             Height="Auto"
@@ -98,10 +88,10 @@
             Grid.RowSpan="1"
             VerticalAlignment="Stretch" 
             Width="Auto"/>
-        <Comp:AreaToolbarControl Grid.Column="2" 
+        <Comp:AreaToolbarControl Grid.Column="0" 
                                  HorizontalAlignment="Stretch" 
-                                 Grid.Row="6" 
-                                 Grid.ColumnSpan="2"
+                                 Grid.Row="7" 
+                                 Grid.ColumnSpan="3"
                                  VerticalAlignment="Stretch"/>
 
     </Grid>
