--- a/Ceriyo.Toolset/MainWindow.xaml
+++ b/Ceriyo.Toolset/MainWindow.xaml
@@ -54,32 +54,6 @@
             <frb:FlatRedBallControl
             x:Name="gameControl"/>
         </DockPanel>
-
-        <Comp:AreaSelectionControl 
-            x:Name="areaSelection"
-            HorizontalAlignment="Stretch" 
-            Grid.Row="2" 
-            Grid.RowSpan="1"
-            Grid.Column="5" 
-            VerticalAlignment="Stretch"
-            Width="Auto"
-            Height="Auto"
-            />
-
-        <Comp:PaintObjectsControl x:Name="paintObjects"
-            Grid.Column="5" 
-            HorizontalAlignment="Stretch" 
-            Grid.Row="5" 
-            Grid.RowSpan="2"
-            VerticalAlignment="Stretch"/>
-        <Comp:ObjectSelectionComponent x:Name="objectSelection"
-            Grid.Column="5" 
-            HorizontalAlignment="Stretch" 
-            Grid.Row="3" 
-            Grid.RowSpan="2" 
-            VerticalAlignment="Stretch" 
-            Height="Auto"
-            Width="Auto"/>
         <Comp:HotBarControl Grid.Column="0"
             Grid.ColumnSpan="6" 
             HorizontalAlignment="Stretch" 
@@ -88,6 +62,11 @@
             Grid.RowSpan="1"
             VerticalAlignment="Stretch" 
             Width="Auto"/>
+        
+        <Comp:AreaEditorComponent x:Name="areaEditor"
+            Grid.Column="7"
+            Grid.Row="2"
+            Grid.RowSpan="6"></Comp:AreaEditorComponent>
         <Comp:AreaToolbarControl Grid.Column="0" 
                                  HorizontalAlignment="Stretch" 
                                  Grid.Row="7" 
