--- a/Ceriyo.Library/Content/GUI/Layouts/MainMenuLayout.xml
+++ b/Ceriyo.Library/Content/GUI/Layouts/MainMenuLayout.xml
@@ -56,5 +56,9 @@
         </UIComponent>
       </Children>
     </UIComponent>
+
+    <UIComponent>
+      <ComponentType>LoginMenuLayout</ComponentType>
+    </UIComponent>
   </Components>
 </UILayout>
