--- a/Ceriyo.Server/MainWindow.xaml
+++ b/Ceriyo.Server/MainWindow.xaml
@@ -321,7 +321,7 @@
                           Width="512"/>
                     <ListBox Name="lbBlacklist" 
                              HorizontalAlignment="Left"
-                             Height="251"
+                             Height="277"
                              Margin="10,10,0,0" 
                              VerticalAlignment="Top" 
                              ItemsSource="{Binding ServerSettings.Blacklist}"
@@ -333,18 +333,20 @@
                              TextWrapping="Wrap" 
                              Text="{Binding BlacklistUsername}" 
                              VerticalAlignment="Top" 
-                             Width="379"/>
+                             Width="266"/>
                     <Button Name="buttonAddToBlacklist" 
                             Content="Add to Blacklist" 
                             HorizontalAlignment="Left"
-                            Margin="394,292,0,0" 
+                            Margin="281,292,0,0" 
                             VerticalAlignment="Top" 
+                            Click="AddToBlacklist"
                             Width="108" />
                     <Button Name="btnRemoveSelectedBlacklist"
                             Content="Remove Selected" 
                             HorizontalAlignment="Left" 
-                            Margin="394,266,0,0"
+                            Margin="394,292,0,0"
                             VerticalAlignment="Top" 
+                            Click="RemoveSelectedFromBlacklist"
                             Width="108" />
                 </Grid>
             </TabItem>
